Fixed integration tests

--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
@@ -58,7 +58,7 @@
 		<div class="govuk-width-container">
 			<div class="govuk-phase-banner">
 				<p class="translate">
-					<a class="govuk-link" href="/translation" rel="nofollow">en</a>
+					<a class="govuk-link" href="/translation/home" rel="nofollow">en</a>
 				</p>
 				<div class="govuk-phase-banner__content">
 					<strong class="govuk-phase-banner__content__tag govuk-tag">
