--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
@@ -149,7 +149,7 @@
 								<div class="hf-card">
 									<a href="money-and-benefits" class="govuk-link">
 										<div class="hf-card-container">
-											<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/41ReCu3tvkcBzKuN8fTf4/c14f30c67b77fffc2a263d109049e2e3/money_and_benefits.png">
+											<img class="full-width-image card-image" title="Money and benefits" src="//images.ctfassets.net/3y72rykjd1o5/41ReCu3tvkcBzKuN8fTf4/c14f30c67b77fffc2a263d109049e2e3/money_and_benefits.png" alt="Money and benefits">
 											<div class="cat-card-details">
 												<h3 class="govuk-heading-m">Money and benefits</h3>
 												<p class="govuk-body">Help with money when you leave care and benefits you can apply for</p>
@@ -160,7 +160,7 @@
 								<div class="hf-card">
 									<a href="housing-and-accommodation-support" class="govuk-link">
 										<div class="hf-card-container">
-											<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/JLWZYijtRxJTiMS9GAX0v/28a98eea7cfd4c9559e849341937b2d8/housing_and_benefits.png">
+											<img class="full-width-image card-image" title="Housing and accommodation" src="//images.ctfassets.net/3y72rykjd1o5/JLWZYijtRxJTiMS9GAX0v/28a98eea7cfd4c9559e849341937b2d8/housing_and_benefits.png" alt="A house icon">
 											<div class="cat-card-details">
 												<h3 class="govuk-heading-m">Housing and accommodation</h3>
 												<p class="govuk-body">Help finding somewhere to live and other support with housing costs</p>
@@ -171,7 +171,7 @@
 								<div class="hf-card">
 									<a href="work-and-employment-support" class="govuk-link">
 										<div class="hf-card-container">
-											<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/66XWT9DNKN5c7cegM01zTJ/42c9171353e910f26054bceb81f652fb/image.png">
+											<img class="full-width-image card-image" title="Work and employment" src="//images.ctfassets.net/3y72rykjd1o5/66XWT9DNKN5c7cegM01zTJ/42c9171353e910f26054bceb81f652fb/image.png" alt="">
 											<div class="cat-card-details">
 												<h3 class="govuk-heading-m">Work and employment</h3>
 												<p class="govuk-body">Support and services to help with finding and staying in work</p>
@@ -182,7 +182,7 @@
 								<div class="hf-card">
 									<a href="education-and-training-support" class="govuk-link">
 										<div class="hf-card-container">
-											<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/28Nr91ehOn6hWEOqZv05E/f09668e27916b2dd256dda87d1fafc61/image.png">
+											<img class="full-width-image card-image" title="Education and training" src="//images.ctfassets.net/3y72rykjd1o5/28Nr91ehOn6hWEOqZv05E/f09668e27916b2dd256dda87d1fafc61/image.png" alt="">
 											<div class="cat-card-details">
 												<h3 class="govuk-heading-m">Education and training</h3>
 												<p class="govuk-body">Support to help you start or continue education and training</p>
@@ -193,7 +193,7 @@
 								<div class="hf-card">
 									<a href="health-and-wellbeing-support" class="govuk-link">
 										<div class="hf-card-container">
-											<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/4KIK0uYa9WAnsIYe7w86Y7/176b7d0034d531acf8db3caf255be2e5/image.png">
+											<img class="full-width-image card-image" title="Health and wellbeing" src="//images.ctfassets.net/3y72rykjd1o5/4KIK0uYa9WAnsIYe7w86Y7/176b7d0034d531acf8db3caf255be2e5/image.png" alt="">
 											<div class="cat-card-details">
 												<h3 class="govuk-heading-m">Health and wellbeing</h3>
 												<p class="govuk-body">Help with your physical and mental health, including disability support</p>
@@ -204,7 +204,7 @@
 								<div class="hf-card">
 									<a href="support-for-young-people-seeking-asylum" class="govuk-link">
 										<div class="hf-card-container">
-											<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/Lpcxxy1k2SRy5cN5unIPk/9a4c603f548d87a9ebd4cbd0cbef74d4/image.png">
+											<img class="full-width-image card-image" title="Unaccompanied asylum-seeking young people" src="//images.ctfassets.net/3y72rykjd1o5/Lpcxxy1k2SRy5cN5unIPk/9a4c603f548d87a9ebd4cbd0cbef74d4/image.png" alt="">
 											<div class="cat-card-details">
 												<h3 class="govuk-heading-m">Unaccompanied asylum-seeking young people</h3>
 												<p class="govuk-body">Help and advice if you arrived alone in the UK to seek asylum</p>
