--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
@@ -256,10 +256,10 @@
 						<h2 class="govuk-visually-hidden">Support links</h2>
 						<ul class="govuk-footer__inline-list">
 							<li class="govuk-footer__inline-list-item">
-								<a class="govuk-footer__link" href="/en/cookie-policy">Cookie Policy</a>
+								<a class="govuk-footer__link" href="/en/cookie-policy">Cookie policy</a>
 							</li>
 							<li class="govuk-footer__inline-list-item">
-								<a class="govuk-footer__link" href="/en/privacy-policies">Privacy Policies</a>
+								<a class="govuk-footer__link" href="/en/privacy-policies">Privacy policies</a>
 							</li>
 						</ul>
 						<svg aria-hidden="true" focusable="false" class="govuk-footer__licence-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 483.2 195.7" height="17" width="41">
