Various Content and Performance Fixes (#133)
* Renaming translation filter file to match class name

* Reducing JSON size and stopping the second HSTS call which was clearing the correct settings

* Updated slug for translation to "translate-this-website"

* Cookie policy changes

* Removed /pages/ from urls
Cache static assets

* Updated cookie policy

* Update privacy policy content

* Updated content and URLs

* Fix unit and integration tests

* Updated tests

* Fixing tests

--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
@@ -58,7 +58,7 @@
 		<div class="govuk-width-container">
 			<div class="govuk-phase-banner">
 				<p class="translate">
-					<a class="govuk-link" href="/translation/home" rel="nofollow">en</a>
+					<a class="govuk-link" href="/translate-this-website/home" rel="nofollow">en</a>
 				</p>
 				<div class="govuk-phase-banner__content">
 					<strong class="govuk-phase-banner__content__tag govuk-tag">
@@ -256,10 +256,10 @@
 						<h2 class="govuk-visually-hidden">Support links</h2>
 						<ul class="govuk-footer__inline-list">
 							<li class="govuk-footer__inline-list-item">
-								<a class="govuk-footer__link" href="/en/pages/cookie-policy">Cookie Policy</a>
+								<a class="govuk-footer__link" href="/en/cookie-policy">Cookie policy</a>
 							</li>
 							<li class="govuk-footer__inline-list-item">
-								<a class="govuk-footer__link" href="/en/pages/privacy-policies">Privacy Policies</a>
+								<a class="govuk-footer__link" href="/en/privacy-policies">Privacy policies</a>
 							</li>
 						</ul>
 						<svg aria-hidden="true" focusable="false" class="govuk-footer__licence-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 483.2 195.7" height="17" width="41">
