Fix integration test snapshot

--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
@@ -25,8 +25,12 @@
 		<!-- END SHAREAHOLIC CODE -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Work and employment support - Care leavers</title>
-		<link rel="shortcut icon" sizes="16x16 32x32 48x48" href="/assets/images/favicon.svg">
+		<title>Work and employment support</title>
+		<link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg">
+		<link rel="mask-icon" href="/assets/images/govuk-icon-mask.svg" color="#0b0c0c">
+		<link rel="shortcut icon" href="/assets/images/favicon.ico">
+		<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/govuk-icon-180.png">
+		<meta name="apple-mobile-web-app-title" content="Care leavers">
 		<link rel="stylesheet" href="/css/application.css">
 		<link rel="stylesheet" href="/css/metadata.css">
 		<link rel="stylesheet" href="/css/navigation.css">
