--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
@@ -32,8 +32,7 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/govuk-icon-180.png">
 		<meta name="apple-mobile-web-app-title" content="Care leavers">
 		<link rel="stylesheet" href="/css/application.css">
-		<link rel="stylesheet" href="/css/metadata.css">
-		<link rel="stylesheet" href="/css/cta.css">
+		<link rel="stylesheet" href="/css/print.css">
 		<meta property="og:type" content="website">
 		<meta name="twitter:card" content="summary_large_image">
 		<meta property="og:site_name" content="Care leavers">
@@ -308,5 +307,6 @@
     initAll()
 
 		</script>
+		<script src="/js/dfefrontend.min.js" nonce="mock-nonce"></script>
 	</body>
 </html>
