--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
@@ -62,9 +62,6 @@
 		</div>
 		<div class="govuk-width-container">
 			<div class="govuk-phase-banner">
-				<p class="translate">
-					<a class="govuk-link" href="/translate-this-website/home" rel="nofollow">en</a>
-				</p>
 				<div class="govuk-phase-banner__content">
 					<strong class="govuk-phase-banner__content__tag govuk-tag">
 						Beta
@@ -72,6 +69,9 @@
 					<span class="govuk-phase-banner__text">
 						This is a new service.
 					</span>
+					<div class="translate">
+						<a class="govuk-link" href="/translate-this-website/home" rel="nofollow">en</a>
+					</div>
 				</div>
 			</div>
 		</div>
