--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
@@ -59,9 +59,6 @@
 		</div>
 		<div class="govuk-width-container">
 			<div class="govuk-phase-banner">
-				<p class="translate">
-					<a class="govuk-link" href="/translate-this-website/home" rel="nofollow">en</a>
-				</p>
 				<div class="govuk-phase-banner__content">
 					<strong class="govuk-phase-banner__content__tag govuk-tag">
 						Beta
@@ -69,6 +66,9 @@
 					<span class="govuk-phase-banner__text">
 						This is a new service.
 					</span>
+					<div class="translate">
+						<a class="govuk-link" href="/translate-this-website/home" rel="nofollow">en</a>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -148,8 +148,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="govuk-grid-column-one-third">
-					</div>
+					<div class="govuk-grid-column-one-third"></div>
 					<div class="govuk-grid-column-full" id="secondary-content">
 					</div>
 				</div>
