--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
@@ -148,71 +148,71 @@
 						<h2 class="govuk-heading-l" id="Find-support">Find support</h2>
 						<section class="dfe-section govuk-!-margin-top-5">
 							<div class="dfe-grid-container dfe-grid-container--wider govuk-!-margin-top-5">
-								<div class="hf-card">
-									<a href="money-and-benefits" class="govuk-link">
-										<div class="hf-card-container">
-											<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/41ReCu3tvkcBzKuN8fTf4/c14f30c67b77fffc2a263d109049e2e3/money_and_benefits.png">
-											<div class="cat-card-details">
-												<h3 class="govuk-heading-m">Money and benefits</h3>
-												<p class="govuk-body">Help with money when you leave care and benefits you can apply for</p>
-											</div>
-										</div>
-									</a>
+								<div class="dfe-card">
+									<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/41ReCu3tvkcBzKuN8fTf4/c14f30c67b77fffc2a263d109049e2e3/money_and_benefits.png">
+									<div class="dfe-card-container">
+										<h3 class="govuk-heading-m">
+											<a href="money-and-benefits" class="govuk-link govuk-link--no-visited-state dfe-card-link--header">
+												Money and benefits
+											</a>
+										</h3>
+										<p class="govuk-body">Help with money when you leave care and benefits you can apply for</p>
+									</div>
 								</div>
-								<div class="hf-card">
-									<a href="housing-and-accommodation-support" class="govuk-link">
-										<div class="hf-card-container">
-											<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/JLWZYijtRxJTiMS9GAX0v/28a98eea7cfd4c9559e849341937b2d8/housing_and_benefits.png">
-											<div class="cat-card-details">
-												<h3 class="govuk-heading-m">Housing and accommodation</h3>
-												<p class="govuk-body">Help finding somewhere to live and other support with housing costs</p>
-											</div>
-										</div>
-									</a>
+								<div class="dfe-card">
+									<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/JLWZYijtRxJTiMS9GAX0v/28a98eea7cfd4c9559e849341937b2d8/housing_and_benefits.png">
+									<div class="dfe-card-container">
+										<h3 class="govuk-heading-m">
+											<a href="housing-and-accommodation-support" class="govuk-link govuk-link--no-visited-state dfe-card-link--header">
+												Housing and accommodation
+											</a>
+										</h3>
+										<p class="govuk-body">Help finding somewhere to live and other support with housing costs</p>
+									</div>
 								</div>
-								<div class="hf-card">
-									<a href="work-and-employment-support" class="govuk-link">
-										<div class="hf-card-container">
-											<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/66XWT9DNKN5c7cegM01zTJ/42c9171353e910f26054bceb81f652fb/image.png">
-											<div class="cat-card-details">
-												<h3 class="govuk-heading-m">Work and employment</h3>
-												<p class="govuk-body">Support and services to help with finding and staying in work</p>
-											</div>
-										</div>
-									</a>
+								<div class="dfe-card">
+									<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/66XWT9DNKN5c7cegM01zTJ/42c9171353e910f26054bceb81f652fb/image.png">
+									<div class="dfe-card-container">
+										<h3 class="govuk-heading-m">
+											<a href="work-and-employment-support" class="govuk-link govuk-link--no-visited-state dfe-card-link--header">
+												Work and employment
+											</a>
+										</h3>
+										<p class="govuk-body">Support and services to help with finding and staying in work</p>
+									</div>
 								</div>
-								<div class="hf-card">
-									<a href="education-and-training-support" class="govuk-link">
-										<div class="hf-card-container">
-											<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/28Nr91ehOn6hWEOqZv05E/f09668e27916b2dd256dda87d1fafc61/image.png">
-											<div class="cat-card-details">
-												<h3 class="govuk-heading-m">Education and training</h3>
-												<p class="govuk-body">Support to help you start or continue education and training</p>
-											</div>
-										</div>
-									</a>
+								<div class="dfe-card">
+									<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/28Nr91ehOn6hWEOqZv05E/f09668e27916b2dd256dda87d1fafc61/image.png">
+									<div class="dfe-card-container">
+										<h3 class="govuk-heading-m">
+											<a href="education-and-training-support" class="govuk-link govuk-link--no-visited-state dfe-card-link--header">
+												Education and training
+											</a>
+										</h3>
+										<p class="govuk-body">Support to help you start or continue education and training</p>
+									</div>
 								</div>
-								<div class="hf-card">
-									<a href="health-and-wellbeing-support" class="govuk-link">
-										<div class="hf-card-container">
-											<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/4KIK0uYa9WAnsIYe7w86Y7/176b7d0034d531acf8db3caf255be2e5/image.png">
-											<div class="cat-card-details">
-												<h3 class="govuk-heading-m">Health and wellbeing</h3>
-												<p class="govuk-body">Help with your physical and mental health, including disability support</p>
-											</div>
-										</div>
-									</a>
+								<div class="dfe-card">
+									<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/4KIK0uYa9WAnsIYe7w86Y7/176b7d0034d531acf8db3caf255be2e5/image.png">
+									<div class="dfe-card-container">
+										<h3 class="govuk-heading-m">
+											<a href="health-and-wellbeing-support" class="govuk-link govuk-link--no-visited-state dfe-card-link--header">
+												Health and wellbeing
+											</a>
+										</h3>
+										<p class="govuk-body">Help with your physical and mental health, including disability support</p>
+									</div>
 								</div>
-								<div class="hf-card">
-									<a href="support-for-young-people-seeking-asylum" class="govuk-link">
-										<div class="hf-card-container">
-											<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/Lpcxxy1k2SRy5cN5unIPk/9a4c603f548d87a9ebd4cbd0cbef74d4/image.png">
-											<div class="cat-card-details">
-												<h3 class="govuk-heading-m">Unaccompanied asylum-seeking young people</h3>
-												<p class="govuk-body">Help and advice if you arrived alone in the UK to seek asylum</p>
-											</div>
-										</div>
-									</a>
+								<div class="dfe-card">
+									<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/Lpcxxy1k2SRy5cN5unIPk/9a4c603f548d87a9ebd4cbd0cbef74d4/image.png">
+									<div class="dfe-card-container">
+										<h3 class="govuk-heading-m">
+											<a href="support-for-young-people-seeking-asylum" class="govuk-link govuk-link--no-visited-state dfe-card-link--header">
+												Unaccompanied asylum-seeking young people
+											</a>
+										</h3>
+										<p class="govuk-body">Help and advice if you arrived alone in the UK to seek asylum</p>
+									</div>
 								</div>
 							</div>
 						</section>
