Updated snapshot tests

--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
@@ -75,7 +75,7 @@
 		<header class="dfe-header" role="banner">
 			<div class="dfe-width-container dfe-header__container">
 				<div class="dfe-header__logo">
-					<a class="dfe-header__link dfe-header__link--service " href="/" aria-label="Care leavers homepage">
+					<a class="dfe-header__link dfe-header__link--service " href="http://localhost/en/home" aria-label="Care leavers homepage">
 						<img src="/assets/dfe-logo.png" class="dfe-logo" alt="Care leavers homepage">
 						<img src="/assets/dfe-logo-alt.png" class="dfe-logo-hover" alt="Care leavers homepage">
 					</a>
@@ -86,7 +86,7 @@
 			<div class="govuk-width-container">
 				<div class="govuk-service-navigation__container">
 					<span class="govuk-service-navigation__service-name">
-						<a href="/" class="govuk-service-navigation__link">
+						<a href="http://localhost/en/home" class="govuk-service-navigation__link">
 							Care leavers
 						</a>
 					</span>
@@ -136,6 +136,10 @@
 											<dd class="gem-c-metadata__definition notranslate">
 												<a class="govuk-link" href="https://www.gov.uk/government/organisations/department-for-education">Department for Education</a>
 											</dd>
+											<dt class="gem-c-metadata__term print-only">Page:</dt>
+											<dd class="gem-c-metadata__definition print-only">Image Test</dd>
+											<dt class="gem-c-metadata__term print-only">URL:</dt>
+											<dd class="gem-c-metadata__definition print-only">https://localhost/en/home</dd>
 											<dt class="gem-c-metadata__term">Published:</dt>
 											<dd class="gem-c-metadata__definition">30 January 2025</dd>
 											<dt class="gem-c-metadata__term">Last updated:</dt>
