--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
@@ -78,7 +78,7 @@
 		<header class="dfe-header" role="banner">
 			<div class="dfe-width-container dfe-header__container">
 				<div class="dfe-header__logo">
-					<a class="dfe-header__link dfe-header__link--service " href="/" aria-label="Care leavers homepage">
+					<a class="dfe-header__link dfe-header__link--service " href="http://localhost/en/home" aria-label="Care leavers homepage">
 						<img src="/assets/dfe-logo.png" class="dfe-logo" alt="Care leavers homepage">
 						<img src="/assets/dfe-logo-alt.png" class="dfe-logo-hover" alt="Care leavers homepage">
 					</a>
@@ -89,7 +89,7 @@
 			<div class="govuk-width-container">
 				<div class="govuk-service-navigation__container">
 					<span class="govuk-service-navigation__service-name">
-						<a href="/" class="govuk-service-navigation__link">
+						<a href="http://localhost/en/home" class="govuk-service-navigation__link">
 							Care leavers
 						</a>
 					</span>
@@ -127,7 +127,7 @@
 									<li>are aged 15 to 24</li>
 									<li>have spent time in care in England</li>
 									<li>
-										<a class="govuk-link" href="care-terms-explained#definition-Test-Definition">test definition</a>
+										<a class="govuk-link" href="/en/care-terms-explained#definition-Test-Definition">test definition</a>
 									</li>
 								</ul>
 								<p class="govuk-body">This includes:</p>
@@ -152,7 +152,7 @@
 									<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/41ReCu3tvkcBzKuN8fTf4/c14f30c67b77fffc2a263d109049e2e3/money_and_benefits.png">
 									<div class="dfe-card-container">
 										<h3 class="govuk-heading-m">
-											<a href="money-and-benefits" class="govuk-link govuk-link--no-visited-state dfe-card-link--header">
+											<a href="/en/money-and-benefits" class="govuk-link govuk-link--no-visited-state dfe-card-link--header">
 												Money and benefits
 											</a>
 										</h3>
@@ -163,7 +163,7 @@
 									<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/JLWZYijtRxJTiMS9GAX0v/28a98eea7cfd4c9559e849341937b2d8/housing_and_benefits.png">
 									<div class="dfe-card-container">
 										<h3 class="govuk-heading-m">
-											<a href="housing-and-accommodation-support" class="govuk-link govuk-link--no-visited-state dfe-card-link--header">
+											<a href="/en/housing-and-accommodation-support" class="govuk-link govuk-link--no-visited-state dfe-card-link--header">
 												Housing and accommodation
 											</a>
 										</h3>
@@ -174,7 +174,7 @@
 									<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/66XWT9DNKN5c7cegM01zTJ/42c9171353e910f26054bceb81f652fb/image.png">
 									<div class="dfe-card-container">
 										<h3 class="govuk-heading-m">
-											<a href="work-and-employment-support" class="govuk-link govuk-link--no-visited-state dfe-card-link--header">
+											<a href="/en/work-and-employment-support" class="govuk-link govuk-link--no-visited-state dfe-card-link--header">
 												Work and employment
 											</a>
 										</h3>
@@ -185,7 +185,7 @@
 									<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/28Nr91ehOn6hWEOqZv05E/f09668e27916b2dd256dda87d1fafc61/image.png">
 									<div class="dfe-card-container">
 										<h3 class="govuk-heading-m">
-											<a href="education-and-training-support" class="govuk-link govuk-link--no-visited-state dfe-card-link--header">
+											<a href="/en/education-and-training-support" class="govuk-link govuk-link--no-visited-state dfe-card-link--header">
 												Education and training
 											</a>
 										</h3>
@@ -196,7 +196,7 @@
 									<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/4KIK0uYa9WAnsIYe7w86Y7/176b7d0034d531acf8db3caf255be2e5/image.png">
 									<div class="dfe-card-container">
 										<h3 class="govuk-heading-m">
-											<a href="health-and-wellbeing-support" class="govuk-link govuk-link--no-visited-state dfe-card-link--header">
+											<a href="/en/health-and-wellbeing-support" class="govuk-link govuk-link--no-visited-state dfe-card-link--header">
 												Health and wellbeing
 											</a>
 										</h3>
@@ -207,7 +207,7 @@
 									<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/Lpcxxy1k2SRy5cN5unIPk/9a4c603f548d87a9ebd4cbd0cbef74d4/image.png">
 									<div class="dfe-card-container">
 										<h3 class="govuk-heading-m">
-											<a href="support-for-young-people-seeking-asylum" class="govuk-link govuk-link--no-visited-state dfe-card-link--header">
+											<a href="/en/support-for-young-people-seeking-asylum" class="govuk-link govuk-link--no-visited-state dfe-card-link--header">
 												Unaccompanied asylum-seeking young people
 											</a>
 										</h3>
@@ -216,8 +216,8 @@
 								</div>
 							</div>
 						</section>
-						<h3 class="govuk-heading-m" id="za-class--govuk-link--href--all-support--View-all-support--a-">
-							<a class="govuk-link" href="all-support">View all support</a>
+						<h3 class="govuk-heading-m" id="za-class--govuk-link--href---en-all-support--View-all-support--a-">
+							<a class="govuk-link" href="/en/all-support">View all support</a>
 						</h3>
 						<section class="dfe-section banner banner-blue">
 							<div class="banner-content">
@@ -228,7 +228,7 @@
 												<h3 class="govuk-heading-l">Know what support you can get</h3>
 												<p class="govuk-body">Use your 'care leaver status' to find out what support you have the right to.</p>
 												<p class="govuk-body">
-													<a href="status" class="govuk-link">Check your care leaver status</a>
+													<a href="/en/status" class="govuk-link">Check your care leaver status</a>
 												</p>
 											</div>
 											<div class="govuk-grid-column-one-half image-column">
@@ -249,7 +249,7 @@
 									<div class="govuk-grid-column-one-half text-column">
 										<span class="govuk-caption-l">Guide</span>
 										<h3 class="govuk-heading-l">
-											<a href="guide-leaving-care" class="govuk-link">What happens when you leave care</a>
+											<a href="/en/guide-leaving-care" class="govuk-link">What happens when you leave care</a>
 										</h3>
 										<p class="govuk-body">What to expect as you prepare to leave care and what happens after.</p>
 										<p class="govuk-!-margin-bottom-0">
@@ -258,8 +258,8 @@
 								</div>
 							</div>
 						</section>
-						<h3 class="govuk-heading-m" id="za-class--govuk-link--href--leaving-care-guides--View-all-guides--a-">
-							<a class="govuk-link" href="leaving-care-guides">View all guides</a>
+						<h3 class="govuk-heading-m" id="za-class--govuk-link--href---en-leaving-care-guides--View-all-guides--a-">
+							<a class="govuk-link" href="/en/leaving-care-guides">View all guides</a>
 						</h3>
 						<p class="govuk-body"></p>
 					</div>
