--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
@@ -75,7 +75,7 @@
 		<header class="dfe-header" role="banner">
 			<div class="dfe-width-container dfe-header__container">
 				<div class="dfe-header__logo">
-					<a class="dfe-header__link dfe-header__link--service " href="/" aria-label="Care leavers homepage">
+					<a class="dfe-header__link dfe-header__link--service " href="http://localhost/en/home" aria-label="Care leavers homepage">
 						<img src="/assets/dfe-logo.png" class="dfe-logo" alt="Care leavers homepage">
 						<img src="/assets/dfe-logo-alt.png" class="dfe-logo-hover" alt="Care leavers homepage">
 					</a>
@@ -86,7 +86,7 @@
 			<div class="govuk-width-container">
 				<div class="govuk-service-navigation__container">
 					<span class="govuk-service-navigation__service-name">
-						<a href="/" class="govuk-service-navigation__link">
+						<a href="http://localhost/en/home" class="govuk-service-navigation__link">
 							Care leavers
 						</a>
 					</span>
@@ -170,7 +170,7 @@
 												<h3 class="govuk-heading-l">Know what support you can get</h3>
 												<p class="govuk-body">Use your 'care leaver status' to find out what support you have the right to.</p>
 												<p class="govuk-body">
-													<a href="status" class="govuk-link">Check your care leaver status</a>
+													<a href="/en/status" class="govuk-link">Check your care leaver status</a>
 												</p>
 											</div>
 											<div class="govuk-grid-column-one-half image-column">
@@ -214,6 +214,10 @@
 											<dd class="gem-c-metadata__definition notranslate">
 												<a class="govuk-link" href="https://www.gov.uk/government/organisations/department-for-education">Department for Education</a>
 											</dd>
+											<dt class="gem-c-metadata__term print-only">Page:</dt>
+											<dd class="gem-c-metadata__definition print-only">Work and employment support</dd>
+											<dt class="gem-c-metadata__term print-only">URL:</dt>
+											<dd class="gem-c-metadata__definition print-only">https://localhost/en/home</dd>
 											<dt class="gem-c-metadata__term">Published:</dt>
 											<dd class="gem-c-metadata__definition">5 March 2025</dd>
 											<dt class="gem-c-metadata__term">Last updated:</dt>
