--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
@@ -152,7 +152,7 @@
 									<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/41ReCu3tvkcBzKuN8fTf4/c14f30c67b77fffc2a263d109049e2e3/money_and_benefits.png">
 									<div class="dfe-card-container">
 										<h3 class="govuk-heading-m">
-											<a href="/en/money-and-benefits" class="govuk-link govuk-link--no-visited-state dfe-card-link--header">
+											<a href="/en/money-and-benefits" class="govuk-link govuk-link--no-visited-state dfe-card-link--header" rel="">
 												Money and benefits
 											</a>
 										</h3>
@@ -163,7 +163,7 @@
 									<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/JLWZYijtRxJTiMS9GAX0v/28a98eea7cfd4c9559e849341937b2d8/housing_and_benefits.png">
 									<div class="dfe-card-container">
 										<h3 class="govuk-heading-m">
-											<a href="/en/housing-and-accommodation-support" class="govuk-link govuk-link--no-visited-state dfe-card-link--header">
+											<a href="/en/housing-and-accommodation-support" class="govuk-link govuk-link--no-visited-state dfe-card-link--header" rel="">
 												Housing and accommodation
 											</a>
 										</h3>
@@ -174,7 +174,7 @@
 									<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/66XWT9DNKN5c7cegM01zTJ/42c9171353e910f26054bceb81f652fb/image.png">
 									<div class="dfe-card-container">
 										<h3 class="govuk-heading-m">
-											<a href="/en/work-and-employment-support" class="govuk-link govuk-link--no-visited-state dfe-card-link--header">
+											<a href="/en/work-and-employment-support" class="govuk-link govuk-link--no-visited-state dfe-card-link--header" rel="">
 												Work and employment
 											</a>
 										</h3>
@@ -185,7 +185,7 @@
 									<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/28Nr91ehOn6hWEOqZv05E/f09668e27916b2dd256dda87d1fafc61/image.png">
 									<div class="dfe-card-container">
 										<h3 class="govuk-heading-m">
-											<a href="/en/education-and-training-support" class="govuk-link govuk-link--no-visited-state dfe-card-link--header">
+											<a href="/en/education-and-training-support" class="govuk-link govuk-link--no-visited-state dfe-card-link--header" rel="">
 												Education and training
 											</a>
 										</h3>
@@ -196,7 +196,7 @@
 									<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/4KIK0uYa9WAnsIYe7w86Y7/176b7d0034d531acf8db3caf255be2e5/image.png">
 									<div class="dfe-card-container">
 										<h3 class="govuk-heading-m">
-											<a href="/en/health-and-wellbeing-support" class="govuk-link govuk-link--no-visited-state dfe-card-link--header">
+											<a href="/en/health-and-wellbeing-support" class="govuk-link govuk-link--no-visited-state dfe-card-link--header" rel="">
 												Health and wellbeing
 											</a>
 										</h3>
@@ -207,7 +207,7 @@
 									<img class="full-width-image card-image" alt="" role="presentation" src="//images.ctfassets.net/3y72rykjd1o5/Lpcxxy1k2SRy5cN5unIPk/9a4c603f548d87a9ebd4cbd0cbef74d4/image.png">
 									<div class="dfe-card-container">
 										<h3 class="govuk-heading-m">
-											<a href="/en/support-for-young-people-seeking-asylum" class="govuk-link govuk-link--no-visited-state dfe-card-link--header">
+											<a href="/en/support-for-young-people-seeking-asylum" class="govuk-link govuk-link--no-visited-state dfe-card-link--header" rel="">
 												Unaccompanied asylum-seeking young people
 											</a>
 										</h3>
@@ -249,7 +249,7 @@
 									<div class="govuk-grid-column-one-half text-column">
 										<span class="govuk-caption-l">Guide</span>
 										<h3 class="govuk-heading-l">
-											<a href="/en/guide-leaving-care" class="govuk-link">What happens when you leave care</a>
+											<a href="/en/guide-leaving-care" rel="" class="govuk-link">What happens when you leave care</a>
 										</h3>
 										<p class="govuk-body">What to expect as you prepare to leave care and what happens after.</p>
 										<p class="govuk-!-margin-bottom-0">
