Updated the following: - Separated show share links and show print - Updated govuk links expansion to hide for local URLs and WhatsApp URLs - Made link follow-ons in print mode black and not underlined

--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
@@ -206,7 +206,7 @@
 					<div class="govuk-grid-column-full">
 						<div class="govuk-grid-row" id="last-updated">
 							<div class="metadata-logo-wrapper">
-								<div class="govuk-grid-column-two-thirds metadata-column">
+								<div class="govuk-grid-column-full metadata-column">
 									<hr class="govuk-section-break govuk-section-break--visible">
 									<div class="gem-c-metadata" data-module="gem-toggle metadata">
 										<dl class="gem-c-metadata__list">
@@ -225,9 +225,6 @@
 												5 March 2025
 											</dd>
 										</dl>
-									</div>
-									<div class="gem-c-print-link govuk-!-display-none-print govuk-!-margin-top-3 govuk-!-margin-bottom-8">
-										<button class="govuk-link govuk-body-s gem-c-print-link__button" data-module="print-link" id="print-link">Print this page</button>
 									</div>
 								</div>
 							</div>
