--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
@@ -1,28 +1,10 @@
 <!DOCTYPE html>
 <html class="govuk-template" dir="ltr" lang="en">
 	<head>
-		
-		<!-- Clarity -->
-		<script type="text/javascript" nonce="mock-nonce">
-            (function(c,l,a,r,i,t,y){
-                c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)}; 
-                t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-                y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-            })(window, document, "clarity", "script", "test-clarity");
-
-            (function () {
-                window.clarity('consent', false);
-            }());
-        
-		</script>
-		
-		<!-- End Clarity -->     
-		<!-- BEGIN SHAREAHOLIC CODE -->
+		<script nonce="mock-nonce">(function(c,l,a,r,i,t,y){c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);})(window,document,"clarity","script","test-clarity");(function(){window.clarity('consent',false);}());</script>
 		<link rel="preload" href="https://cdn.shareaholic.net/assets/pub/shareaholic.js" as="script">
 		<meta name="shareaholic:site_id" content="abcdefghijk">
 		<script data-cfasync="false" async="" src="https://cdn.shareaholic.net/assets/pub/shareaholic.js" nonce="mock-nonce"></script>
-		
-		<!-- END SHAREAHOLIC CODE -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Find support for care leavers</title>
@@ -48,10 +30,7 @@
 		<link rel="canonical" href="https://localhost/en/home">
 	</head>
 	<body class="govuk-template__body">
-		<script nonce="mock-nonce">
-    document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');
-
-		</script>
+		<script nonce="mock-nonce">document.body.className+=' js-enabled'+('noModule'in HTMLScriptElement.prototype?' govuk-frontend-supported':'');</script>
 		<a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>
 		<div class="environment-banner">
 			<div class="govuk-body-s">
@@ -78,7 +57,7 @@
 		<header class="dfe-header" role="banner">
 			<div class="dfe-width-container dfe-header__container">
 				<div class="dfe-header__logo">
-					<a class="dfe-header__link dfe-header__link--service " href="http://localhost/en/home" aria-label="Care leavers homepage">
+					<a class="dfe-header__link dfe-header__link--service" href="http://localhost/en/home" aria-label="Care leavers homepage">
 						<img src="/assets/dfe-logo.png" class="dfe-logo" alt="Care leavers homepage">
 						<img src="/assets/dfe-logo-alt.png" class="dfe-logo-hover" alt="Care leavers homepage">
 					</a>
@@ -97,8 +76,7 @@
 						<button type="button" class="govuk-service-navigation__toggle govuk-js-service-navigation-toggle" aria-controls="navigation" hidden="">
 							Menu
 						</button>
-						<ul class="govuk-service-navigation__list" id="navigation">
-						</ul>
+						<ul class="govuk-service-navigation__list" id="navigation"></ul>
 					</nav>
 				</div>
 			</div>
@@ -107,9 +85,7 @@
 			<div class="govuk-width-container" id="main-header-container">
 				<div class="govuk-grid-row">
 					<div class="govuk-grid-column-two-thirds">
-						<h1 class="govuk-heading-xl">
-							Find support for care leavers
-						</h1>
+						<h1 class="govuk-heading-xl">Find support for care leavers</h1>
 						<p class="govuk-body-l">Leaving care can be a challenging time. Whether you’re still in care or have already left, help is available.</p>
 					</div>
 				</div>
@@ -232,7 +208,7 @@
 												</p>
 											</div>
 											<div class="govuk-grid-column-one-half image-column">
-												<div class="image-container" style="background-image: url('//images.ctfassets.net/3y72rykjd1o5/3R7f8WLqvJrtrIFg052Fyo/544de741d969a3e233e8faf5bbcaecc4/image.png');"></div>
+												<div class="image-container" style="background-image:url('//images.ctfassets.net/3y72rykjd1o5/3R7f8WLqvJrtrIFg052Fyo/544de741d969a3e233e8faf5bbcaecc4/image.png')"></div>
 											</div>
 										</div>
 									</div>
@@ -242,9 +218,9 @@
 						<h2 class="govuk-heading-l" id="Guides">Guides</h2>
 						<section class="dfe-section alternating-image-text">
 							<div class="govuk-!-margin-top-3 govuk-!-margin-bottom-5">
-								<div class="govuk-grid-row split-panel" style="background: #f3f2f1; vertical-align: text-top;">
+								<div class="govuk-grid-row split-panel" style="background:#f3f2f1;vertical-align:text-top">
 									<div class="govuk-grid-column-one-half image-column">
-										<div class="image-container" style="background-image: url('//images.ctfassets.net/3y72rykjd1o5/3AJ5VJg0WfmJImY90KOpQU/39af1e2a663401b7607b9fac86c50d1e/image.png');"></div>
+										<div class="image-container" style="background-image:url('//images.ctfassets.net/3y72rykjd1o5/3AJ5VJg0WfmJImY90KOpQU/39af1e2a663401b7607b9fac86c50d1e/image.png')"></div>
 									</div>
 									<div class="govuk-grid-column-one-half text-column">
 										<span class="govuk-caption-l">Guide</span>
@@ -252,8 +228,7 @@
 											<a href="/en/guide-leaving-care" rel="" class="govuk-link">What happens when you leave care</a>
 										</h3>
 										<p class="govuk-body">What to expect as you prepare to leave care and what happens after.</p>
-										<p class="govuk-!-margin-bottom-0">
-										</p>
+										<p class="govuk-!-margin-bottom-0"></p>
 									</div>
 								</div>
 							</div>
@@ -263,8 +238,7 @@
 						</h3>
 						<p class="govuk-body"></p>
 					</div>
-					<div class="govuk-grid-column-full">
-					</div>
+					<div class="govuk-grid-column-full"></div>
 				</div>
 			</main>
 		</div>
@@ -277,8 +251,8 @@
 				</div>
 			</div>
 		</section>
-		<footer class="govuk-footer " role="contentinfo">
-			<div class="govuk-width-container ">
+		<footer class="govuk-footer" role="contentinfo">
+			<div class="govuk-width-container">
 				<div class="govuk-footer__meta">
 					<div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
 						<h2 class="govuk-visually-hidden">Support links</h2>
@@ -299,23 +273,21 @@
 						<span class="govuk-footer__licence-description">
 							All content is available under the
 							<a class="govuk-footer__link" href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/" rel="license">
-								Open                         Government Licence v3.0
+								Open Government Licence v3.0
 							</a>, except where otherwise stated
 						</span>
 					</div>
 					<div class="govuk-footer__meta-item">
 						<a class="govuk-footer__link govuk-footer__copyright-logo" href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/">
-							©                     Crown copyright
+							© Crown copyright
 						</a>
 					</div>
 				</div>
 			</div>
 		</footer>
-		<script type="module" nonce="mock-nonce">
-    import { initAll } from '/js/govuk-frontend.min.js'
-    initAll()
-
-		</script>
+		<script type="module" nonce="mock-nonce">import{initAll}from'/js/govuk-frontend.min.js'
+initAll()</script>
 		<script src="/js/dfefrontend.min.js" nonce="mock-nonce"></script>
+		<script nonce="mock-nonce">window.dataLayer=window.dataLayer||[];const linksWithLanguage=document.querySelectorAll("a[hreflang]");linksWithLanguage.forEach((link)=>{link.addEventListener("click",(e)=>{let originLanguage=document.documentElement.lang;let targetLanguage=link.hreflang;if(originLanguage!==targetLanguage){window.dataLayer.push({'event':'languageChanged','languages':{'from':originLanguage,'to':targetLanguage}});}})})</script>
 	</body>
 </html>
