Minify HTML, JS, CSS, and XML (#182)
* Minify HTML, JS, CSS, and XML

* Add Brotli compression

--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
@@ -1,28 +1,10 @@
 <!DOCTYPE html>
 <html class="govuk-template" dir="ltr" lang="en">
 	<head>
-		
-		<!-- Clarity -->
-		<script type="text/javascript" nonce="mock-nonce">
-            (function(c,l,a,r,i,t,y){
-                c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)}; 
-                t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-                y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-            })(window, document, "clarity", "script", "test-clarity");
-
-            (function () {
-                window.clarity('consent', false);
-            }());
-        
-		</script>
-		
-		<!-- End Clarity -->     
-		<!-- BEGIN SHAREAHOLIC CODE -->
+		<script nonce="mock-nonce">(function(c,l,a,r,i,t,y){c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);})(window,document,"clarity","script","test-clarity");(function(){window.clarity('consent',false);}());</script>
 		<link rel="preload" href="https://cdn.shareaholic.net/assets/pub/shareaholic.js" as="script">
 		<meta name="shareaholic:site_id" content="abcdefghijk">
 		<script data-cfasync="false" async="" src="https://cdn.shareaholic.net/assets/pub/shareaholic.js" nonce="mock-nonce"></script>
-		
-		<!-- END SHAREAHOLIC CODE -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Work and employment support</title>
@@ -45,10 +27,7 @@
 		<link rel="canonical" href="https://localhost/en/home">
 	</head>
 	<body class="govuk-template__body">
-		<script nonce="mock-nonce">
-    document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');
-
-		</script>
+		<script nonce="mock-nonce">document.body.className+=' js-enabled'+('noModule'in HTMLScriptElement.prototype?' govuk-frontend-supported':'');</script>
 		<a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>
 		<div class="environment-banner">
 			<div class="govuk-body-s">
@@ -75,7 +54,7 @@
 		<header class="dfe-header" role="banner">
 			<div class="dfe-width-container dfe-header__container">
 				<div class="dfe-header__logo">
-					<a class="dfe-header__link dfe-header__link--service " href="http://localhost/en/home" aria-label="Care leavers homepage">
+					<a class="dfe-header__link dfe-header__link--service" href="http://localhost/en/home" aria-label="Care leavers homepage">
 						<img src="/assets/dfe-logo.png" class="dfe-logo" alt="Care leavers homepage">
 						<img src="/assets/dfe-logo-alt.png" class="dfe-logo-hover" alt="Care leavers homepage">
 					</a>
@@ -94,8 +73,7 @@
 						<button type="button" class="govuk-service-navigation__toggle govuk-js-service-navigation-toggle" aria-controls="navigation" hidden="">
 							Menu
 						</button>
-						<ul class="govuk-service-navigation__list" id="navigation">
-						</ul>
+						<ul class="govuk-service-navigation__list" id="navigation"></ul>
 					</nav>
 				</div>
 			</div>
@@ -111,9 +89,7 @@
 				</nav>
 				<div class="govuk-grid-row">
 					<div class="govuk-grid-column-two-thirds">
-						<h1 class="govuk-heading-xl">
-							Work and employment support
-						</h1>
+						<h1 class="govuk-heading-xl">Work and employment support</h1>
 						<p class="govuk-body-l">Support and services to help with finding and staying in work</p>
 					</div>
 				</div>
@@ -174,7 +150,7 @@
 												</p>
 											</div>
 											<div class="govuk-grid-column-one-half image-column">
-												<div class="image-container" style="background-image: url('//images.ctfassets.net/3y72rykjd1o5/3R7f8WLqvJrtrIFg052Fyo/544de741d969a3e233e8faf5bbcaecc4/image.png');"></div>
+												<div class="image-container" style="background-image:url('//images.ctfassets.net/3y72rykjd1o5/3R7f8WLqvJrtrIFg052Fyo/544de741d969a3e233e8faf5bbcaecc4/image.png')"></div>
 											</div>
 										</div>
 									</div>
@@ -221,9 +197,7 @@
 											<dt class="gem-c-metadata__term">Published:</dt>
 											<dd class="gem-c-metadata__definition">5 March 2025</dd>
 											<dt class="gem-c-metadata__term">Last updated:</dt>
-											<dd class="gem-c-metadata__definition">
-												5 March 2025
-											</dd>
+											<dd class="gem-c-metadata__definition">5 March 2025</dd>
 										</dl>
 									</div>
 								</div>
@@ -237,8 +211,7 @@
 						</div>
 					</div>
 					<div class="govuk-grid-column-one-third"></div>
-					<div class="govuk-grid-column-full" id="secondary-content">
-					</div>
+					<div class="govuk-grid-column-full" id="secondary-content"></div>
 				</div>
 			</main>
 		</div>
@@ -251,8 +224,8 @@
 				</div>
 			</div>
 		</section>
-		<footer class="govuk-footer " role="contentinfo">
-			<div class="govuk-width-container ">
+		<footer class="govuk-footer" role="contentinfo">
+			<div class="govuk-width-container">
 				<div class="govuk-footer__meta">
 					<div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
 						<h2 class="govuk-visually-hidden">Support links</h2>
@@ -273,40 +246,23 @@
 						<span class="govuk-footer__licence-description">
 							All content is available under the
 							<a class="govuk-footer__link" href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/" rel="license">
-								Open                         Government Licence v3.0
+								Open Government Licence v3.0
 							</a>, except where otherwise stated
 						</span>
 					</div>
 					<div class="govuk-footer__meta-item">
 						<a class="govuk-footer__link govuk-footer__copyright-logo" href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/">
-							©                     Crown copyright
+							© Crown copyright
 						</a>
 					</div>
 				</div>
 			</div>
 		</footer>
-		<script defer="" nonce="mock-nonce">
-            const printPage  = () => window.print();
-
-            const addPrintButtonEventListener  = () => {
-                const printButton = document.getElementById("print-link");
-
-                if (!printButton) {
-                    return;
-                }
-
-                printButton.addEventListener('click', printPage);
-
-            }
-
-            addPrintButtonEventListener();
-        
-		</script>
-		<script type="module" nonce="mock-nonce">
-    import { initAll } from '/js/govuk-frontend.min.js'
-    initAll()
-
-		</script>
+		<script defer="" nonce="mock-nonce">const printPage=()=>window.print();const addPrintButtonEventListener=()=>{const printButton=document.getElementById("print-link");if(!printButton){return;}
+printButton.addEventListener('click',printPage);}
+addPrintButtonEventListener();</script>
+		<script type="module" nonce="mock-nonce">import{initAll}from'/js/govuk-frontend.min.js'
+initAll()</script>
 		<script src="/js/dfefrontend.min.js" nonce="mock-nonce"></script>
 	</body>
 </html>
