Enable site verification using Meta tags (#188)
* Renamed metadata to avoid clash on cards

* Add site verification to Contentful

* Add site verification to model

* Output site verification meta tags

* Updated tests

* Fix for favicon and manifest

* Minor change to tag helper to fix the null reference warning

--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
@@ -8,10 +8,11 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Find support for care leavers</title>
-		<link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg">
+		<link rel="icon" sizes="48x48" href="/assets/images/favicon.ico">
+		<link rel="icon" sizes="any" type="image/svg+xml" href="/assets/images/favicon.svg">
 		<link rel="mask-icon" href="/assets/images/govuk-icon-mask.svg" color="#0b0c0c">
-		<link rel="shortcut icon" href="/assets/images/favicon.ico">
 		<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/govuk-icon-180.png">
+		<link rel="manifest" href="/assets/manifest.json">
 		<meta name="apple-mobile-web-app-title" content="Care leavers">
 		<link rel="stylesheet" href="/css/application.css">
 		<link rel="stylesheet" href="/css/print.css">
@@ -28,6 +29,8 @@
 		<meta property="twitter:description" content="Leaving care can be a challenging time. Whether you’re still in care or have already left, help is available.">
 		<meta name="description" content="Leaving care can be a challenging time. Whether you’re still in care or have already left, help is available.">
 		<link rel="canonical" href="https://localhost/en/home">
+		<meta name="google-site-verification">
+		<meta name="msvalidate.01">
 	</head>
 	<body class="govuk-template__body">
 		<script nonce="mock-nonce">document.body.className+=' js-enabled'+('noModule'in HTMLScriptElement.prototype?' govuk-frontend-supported':'');</script>
