Updated to ensure most links are relative, and absolute links are https

--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/PageWithBanner.html
@@ -57,7 +57,7 @@
 		<header class="dfe-header" role="banner">
 			<div class="dfe-width-container dfe-header__container">
 				<div class="dfe-header__logo">
-					<a class="dfe-header__link dfe-header__link--service" href="http://localhost/en/home" aria-label="Care leavers homepage">
+					<a class="dfe-header__link dfe-header__link--service" href="/en/home" aria-label="Care leavers homepage">
 						<img src="/assets/dfe-logo.png" class="dfe-logo" alt="Care leavers homepage">
 						<img src="/assets/dfe-logo-alt.png" class="dfe-logo-hover" alt="Care leavers homepage">
 					</a>
@@ -68,7 +68,7 @@
 			<div class="govuk-width-container">
 				<div class="govuk-service-navigation__container">
 					<span class="govuk-service-navigation__service-name">
-						<a href="http://localhost/en/home" class="govuk-service-navigation__link">
+						<a href="/en/home" class="govuk-service-navigation__link">
 							Care leavers
 						</a>
 					</span>
