Fixed broken tests due to DateTime.Today

--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/SimpleAsset.html
@@ -8,7 +8,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Image Test</title>
-		<style nonce="mock-nonce">:root{--generated:'21 May 2025';--siteurl:'https://localhost/en/home'}</style>
+		<style nonce="mock-nonce">:root{--generated:TODAY';--siteurl:'https://localhost/en/home'}</style>
 		<link rel="icon" sizes="48x48" href="/assets/images/favicon.ico">
 		<link rel="icon" sizes="any" type="image/svg+xml" href="/assets/images/favicon.svg">
 		<link rel="mask-icon" href="/assets/images/govuk-icon-mask.svg" color="#0b0c0c">
