--- a/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
+++ b/src/web/tests/CareLeavers.Integration.Tests/Tests/SnapshotTests/Output/HomePageWithSupport.html
@@ -137,6 +137,11 @@
 											</a>
 										</h3>
 										<p class="govuk-body">Help with money when you leave care and benefits you can apply for</p>
+										<div class="dfe-card-external-link-print-only">
+											<p class="govuk-body-s govuk-!-margin-top-2">
+												<a href="/en/money-and-benefits" class="govuk-link">/en/money-and-benefits</a>
+											</p>
+										</div>
 									</div>
 								</div>
 								<div class="dfe-card">
@@ -148,6 +153,11 @@
 											</a>
 										</h3>
 										<p class="govuk-body">Help finding somewhere to live and other support with housing costs</p>
+										<div class="dfe-card-external-link-print-only">
+											<p class="govuk-body-s govuk-!-margin-top-2">
+												<a href="/en/housing-and-accommodation-support" class="govuk-link">/en/housing-and-accommodation-support</a>
+											</p>
+										</div>
 									</div>
 								</div>
 								<div class="dfe-card">
@@ -159,6 +169,11 @@
 											</a>
 										</h3>
 										<p class="govuk-body">Support and services to help with finding and staying in work</p>
+										<div class="dfe-card-external-link-print-only">
+											<p class="govuk-body-s govuk-!-margin-top-2">
+												<a href="/en/work-and-employment-support" class="govuk-link">/en/work-and-employment-support</a>
+											</p>
+										</div>
 									</div>
 								</div>
 								<div class="dfe-card">
@@ -170,6 +185,11 @@
 											</a>
 										</h3>
 										<p class="govuk-body">Support to help you start or continue education and training</p>
+										<div class="dfe-card-external-link-print-only">
+											<p class="govuk-body-s govuk-!-margin-top-2">
+												<a href="/en/education-and-training-support" class="govuk-link">/en/education-and-training-support</a>
+											</p>
+										</div>
 									</div>
 								</div>
 								<div class="dfe-card">
@@ -181,6 +201,11 @@
 											</a>
 										</h3>
 										<p class="govuk-body">Help with your physical and mental health, including disability support</p>
+										<div class="dfe-card-external-link-print-only">
+											<p class="govuk-body-s govuk-!-margin-top-2">
+												<a href="/en/health-and-wellbeing-support" class="govuk-link">/en/health-and-wellbeing-support</a>
+											</p>
+										</div>
 									</div>
 								</div>
 								<div class="dfe-card">
@@ -192,6 +217,11 @@
 											</a>
 										</h3>
 										<p class="govuk-body">Help and advice if you arrived alone in the UK to seek asylum</p>
+										<div class="dfe-card-external-link-print-only">
+											<p class="govuk-body-s govuk-!-margin-top-2">
+												<a href="/en/support-for-young-people-seeking-asylum" class="govuk-link">/en/support-for-young-people-seeking-asylum</a>
+											</p>
+										</div>
 									</div>
 								</div>
 							</div>
